#decode 的配置

add_definitions(-DENACMP -DENAQZS -DENAGAL -DENAGLO)

#基础cpp文件
SET( DECODE_TEST_CPP 
	${PROJECT_SOURCE_DIR}/src/decode
	)

#头文件设置
SET( DECODE_TEST_H 
${PROJECT_SOURCE_DIR}/include
${PROJECT_SOURCE_DIR}/src/decode)

#公共库文件
SET(COMMON_CPP ${PROJECT_SOURCE_DIR}/src/common)


FILE(GLOB_RECURSE DECODE_TEST_CPP_FILE LIST_DIRECTORIES false ${DECODE_TEST_CPP}/*.cpp)
MESSAGE(STATUS "DECODE_TEST_CPP_FILE:")
FOREACH(file IN LISTS DECODE_TEST_CPP_FILE)
	MESSAGE(STATUS ${file})
ENDFOREACH(file)


FILE(GLOB_RECURSE DECODE_TEST_H_FILE LIST_DIRECTORIES false  ${DECODE_TEST_H}/*.h)
MESSAGE(STATUS "DECODE_TEST_H_FILE:")
FOREACH(file IN LISTS DECODE_TEST_H_FILE)
	MESSAGE(STATUS ${file})
ENDFOREACH(file)


FILE(GLOB_RECURSE COMMON_FILE LIST_DIRECTORIES false ${COMMON_CPP}/*.cpp)
MESSAGE(STATUS "COMMON_FILE:")
FOREACH(file IN LISTS COMMON_FILE)
	MESSAGE(STATUS ${file})
ENDFOREACH(file)

include_directories(${DECODE_TEST_H})

add_executable(decode_program ${DECODE_TEST_CPP_FILE} ${DECODE_TEST_H_FILE} ${COMMON_FILE})
target_link_libraries(decode_program gtest_main gtest)